microfinance/trunk/src/objects/Savings_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Account_Balance__c</fullName>
        <formula>Savings_Account__r.Account_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Enter the bank account number where applicable. Typically for check transactions.</description>
        <inlineHelpText>Enter the bank account number where applicable. Typically for check transactions.</inlineHelpText>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cheque_ID__c</fullName>
        <description>Enter the check number if payment is made by check</description>
        <label>Check Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voucher</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Running_Balance__c</fullName>
        <label>Running Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Savings_Account__c</fullName>
        <label>Savings Account</label>
        <referenceTo>Savings_Account__c</referenceTo>
        <relationshipLabel>Savings Transactions</relationshipLabel>
        <relationshipName>Savings_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unscheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overdue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calculating</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Number__c</fullName>
        <description>Enter the Voucher number where applicable.</description>
        <label>Voucher Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Savings Transaction</label>
    <nameField>
        <displayFormat>TN-{000000000}</displayFormat>
        <label>Savings Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Savings Transactions</pluralLabel>
    <recordTypes>
        <fullName>Deposit</fullName>
        <active>true</active>
        <description>Deposit</description>
        <label>Deposit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Interest</fullName>
        <active>true</active>
        <description>Interest</description>
        <label>Interest</label>
    </recordTypes>
    <recordTypes>
        <fullName>Withdrawal</fullName>
        <active>true</active>
        <description>Withdrawal</description>
        <label>Withdrawal</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Max_Withdrawal</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(NOT(ISNULL ( Savings_Account__c)), Savings_Account__r.Max_Amount_Per_Withdrawal__c  &gt; 0,  RecordTypeId = &apos;012A0000000ZBKb&apos;),  Amount__c &gt; Savings_Account__r.Max_Amount_Per_Withdrawal__c, false)</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Maximum Withdrawal Amount Exceeded</errorMessage>
    </validationRules>
</CustomObject>